# Oceanix

./: .gitignore  CMakeLists.txt  Oceanix_test_mode.sh  README.md  build_and_test.sh  install.sh
.devcontainer/: Dockerfile  devcontainer.json  mosquitto
config/: config.json  config_controller_old.json
docs/: changelog.md  communication.md  configuration.md  contribute.md  installation.md  usage.md
helper/: debug_mqtt_viewer_page.py  mqtt_config_page.py  mqtt_handler.py  send_test_mqtt_page.py
include/: MIMO_controller.hpp  PP_controller.hpp  bar02.hpp  config.hpp  controller.hpp  controller_abstract.hpp  logger.hpp  motor.hpp  motorID.hpp  motors.hpp  mqtt_client.hpp  nucleo.hpp  sensor.hpp  system_monitor.hpp  utils.hpp  wt61.hpp
libs/BAR/src/: driver_ms5837.c  driver_ms5837_basic.c  iic.c
libs/Chimpanzee/src/: serial.cpp
libs/Controller/include/: EVA_MIMOControlCodeGen.h  FullStateFeedbackControl.hpp  PIDController.hpp  PolePlacementControl.h  control_allocation.hpp  rtwtypes.h
libs/Controller/src/: EVA_MIMOControlCodeGen.cpp  FullStateFeedbackControl.cpp  PIDController.cpp  PolePlacementControl.cpp  control_allocation.cpp
libs/IMU/include/: REG.h  WIT61P.h
libs/IMU/src/: WIT61P.c  wit_c_sdk.c
src/: MIMO_controller.cpp  PP_controller.cpp  bar02.cpp  config.cpp  controller.cpp  logger.cpp  main.cpp  motor.cpp  motors.cpp  mqtt_client.cpp  nucleo.cpp  sensor.cpp  system_monitor.cpp  utils.cpp  wt61.cpp
utils/: debug_mqtt_viewer.py  debug_mqtt_viewer_page.py  logger_page.py  main_app.py  mqtt_config_page.py  mqtt_handler.py  oceanix_helper.py  send_test_mqtt.py  send_test_mqtt_page.py  update_configuration.py  update_configuration_page.py
